syntax = "proto3";
option java_package = "model.protobuf";
option java_outer_classname = "RegisterProto";

message RegisterRequest {
  // 登录请求
  string username = 1;
  string password = 2;
  string contact = 3;
  string uuid = 4;
}

message RegisterResponse {
  // 登录响应
  enum Result {
    FATAL = 0;
    REPEAT = 1;
    SUCCESS = 2;
  }
}
